# UXP-mirror

./: .gitignore  CLOBBER  README.md  TRADEMARK  configure.py  mach  old-configure.in
caps/: BasePrincipal.cpp  moz.build
media/webrtc/trunk/webrtc/: BUILD.gn  engine_configurations.h  typedefs.h  video_engine_tests.isolate  webrtc_perf_tests.isolate  webrtc_tests.gypi
media/webrtc/trunk/webrtc/base/: BUILD.gn  base.gyp  base_tests.gyp  basictypes.h  basictypes_unittest.cc  bitbuffer_unittest.cc  byteorder.h  checks.cc  common.cc  cpumonitor.cc  event.cc  filelock.cc  gunit.h  gunit_prod.h  httpcommon.cc  ipaddress.cc  latebindingsymboltable.cc  latebindingsymboltable_unittest.cc  logging.cc  logging.h  maccocoasocketserver.h  macconversion.cc  macconversion.h  macsocketserver.h  macutils.cc  macutils.h  macwindowpicker_unittest.cc  messagequeue.cc  move.h  nethelpers.cc  network.cc  network_unittest.cc  openssladapter.cc  physicalsocketserver.cc  platform_thread.cc  posix.cc  proxydetect.cc  sha1.cc  socket_unittest.cc  socketaddress.cc  (+14 more)
media/webrtc/trunk/webrtc/common_audio/: common_audio.gyp
media/webrtc/trunk/webrtc/common_audio/resampler/: resampler.cc
media/webrtc/trunk/webrtc/common_video/: common_video_unittests.gyp  common_video_unittests.isolate
media/webrtc/trunk/webrtc/common_video/libyuv/: scaler_unittest.cc  webrtc_libyuv.cc
media/webrtc/trunk/webrtc/modules/: modules.gyp  modules_tests.isolate  modules_unittests.isolate
media/webrtc/trunk/webrtc/modules/audio_coding/: BUILD.gn  audio_codec_speed_tests.isolate  audio_coding_tests.gypi
media/webrtc/trunk/webrtc/modules/audio_coding/neteq/: audio_decoder_unittest.cc  audio_decoder_unittests.isolate  neteq.gypi  neteq_stereo_unittest.cc  neteq_unittest.cc
media/webrtc/trunk/webrtc/modules/audio_device/: BUILD.gn  audio_device.gypi  audio_device_generic.h  audio_device_impl.cc  audio_device_impl.h
media/webrtc/trunk/webrtc/modules/audio_device/include/: audio_device.h
media/webrtc/trunk/webrtc/modules/audio_device/test/: audio_device_test_api.cc  audio_device_test_defines.h  audio_device_test_func.cc  func_test_manager.cc  func_test_manager.h
media/webrtc/trunk/webrtc/modules/audio_processing/: BUILD.gn  audio_processing.gypi  audio_processing_impl.cc
media/webrtc/trunk/webrtc/modules/audio_processing/aec/: aec_core.c  echo_cancellation.c  system_delay_unittest.cc
media/webrtc/trunk/webrtc/modules/audio_processing/test/: audio_processing_unittest.cc  process_test.cc
media/webrtc/trunk/webrtc/modules/desktop_capture/: BUILD.gn  desktop_capture.gypi  desktop_capture_options.cc  desktop_capture_options.h
media/webrtc/trunk/webrtc/modules/media_file/source/: media_file_unittest.cc
media/webrtc/trunk/webrtc/modules/remote_bitrate_estimator/: overuse_detector_unittest.cc
media/webrtc/trunk/webrtc/modules/utility/: BUILD.gn  utility.gypi
media/webrtc/trunk/webrtc/modules/video_capture/: BUILD.gn  ensure_initialized.cc  video_capture.gypi
media/webrtc/trunk/webrtc/modules/video_capture/include/: video_capture.h
media/webrtc/trunk/webrtc/modules/video_capture/test/: video_capture_unittest.cc
media/webrtc/trunk/webrtc/modules/video_render/: BUILD.gn  video_render.gypi  video_render_internal_impl.cc
media/webrtc/trunk/webrtc/modules/video_render/include/: video_render_defines.h
media/webrtc/trunk/webrtc/overrides/webrtc/base/: logging.cc
media/webrtc/trunk/webrtc/p2p/base/: turnport_unittest.cc
media/webrtc/trunk/webrtc/sound/: platformsoundsystem.cc
media/webrtc/trunk/webrtc/system_wrappers/: BUILD.gn  system_wrappers.gyp  system_wrappers_tests.gyp
media/webrtc/trunk/webrtc/system_wrappers/interface/: asm_defines.h  static_instance.h
media/webrtc/trunk/webrtc/system_wrappers/source/: cpu_features.cc  cpu_info.cc  event.cc  thread_posix.cc  tick_util.cc
media/webrtc/trunk/webrtc/test/: BUILD.gn  test.gyp  video_renderer.cc  webrtc_test_common.gyp
media/webrtc/trunk/webrtc/test/channel_transport/: channel_transport.cc  udp_socket_wrapper.cc  udp_transport_impl.cc
media/webrtc/trunk/webrtc/test/testsupport/: fileutils.cc  fileutils.h  fileutils_unittest.cc
media/webrtc/trunk/webrtc/tools/: tools.gyp  tools_unittests.isolate
media/webrtc/trunk/webrtc/tools/agc/: agc_manager_integrationtest.cc
media/webrtc/trunk/webrtc/tools/barcode_tools/: barcode_decoder.py
media/webrtc/trunk/webrtc/tools/rtcbot/: README  botmanager.js
media/webrtc/trunk/webrtc/tools/rtcbot/test/: three_bots_video_conference.js  two_way_video_streaming.js
media/webrtc/trunk/webrtc/video_engine/: video_engine_core.gypi  vie_capturer.cc  vie_defines.h  vie_input_manager.cc
media/webrtc/trunk/webrtc/video_engine/include/: vie_base.h
media/webrtc/trunk/webrtc/video_engine/test/auto_test/: vie_auto_test.gypi
media/webrtc/trunk/webrtc/voice_engine/: voe_audio_processing_impl.cc  voe_hardware_impl.cc  voice_engine.gyp  voice_engine_defines.h  voice_engine_impl.cc
media/webrtc/trunk/webrtc/voice_engine/include/: voe_base.h
media/webrtc/trunk/webrtc/voice_engine/test/auto_test/: resource_manager.cc  voe_standard_test.cc  voe_standard_test.h  voe_test_common.h
(+2044 files in other folders)
